commiting just to pull

--- a/SlugRide/src/index.html
+++ b/SlugRide/src/index.html
@@ -5,6 +5,8 @@
   <title>SlugRide</title>
   <base href="/">
   <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css" />
+  <link data-require="bootstrap@*" data-semver="4.0.5" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" />
+   <script data-require="bootstrap@*" data-semver="4.0.5" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js"></script>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
