--- a/SlugRide/src/index.html
+++ b/SlugRide/src/index.html
@@ -4,6 +4,9 @@
   <meta charset="utf-8">
   <title>SlugRide</title>
   <base href="/">
+  <script src="//code.jquery.com/jquery-1.12.0.min.js"></script>
+  <script src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
+  <script src="https://npmcdn.com/tether@1.2.4/dist/js/tether.min.js"></script>
   <link rel="stylesheet" href="https://bootswatch.com/cosmo/bootstrap.min.css" />
   <link data-require="bootstrap@*" data-semver="4.0.5" rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" />
    <script data-require="bootstrap@*" data-semver="4.0.5" src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.5/js/bootstrap.min.js"></script>
